# tkc-locality-geocoding-cli-app

./: .gitignore  CLAUDE.md  FEATURE_ANALYSIS_IARE.md  FRONTEND-FIXES.md  IARE-FEATURE-IMPLEMENTATION.md  IMPLEMENTATION_LOG.md  PRD.md  README.md  WEB-APP-SETUP.md  netlify.toml  pyproject.toml  start-backend.sh  start-dev.sh  start-frontend.sh
backend/: main.py
backend/models/: requests.py  responses.py
backend/routers/: geocode.py  health.py
backend/services/: geocoding_service.py
data/asgs/: README.md
data/input/: locations.csv  test-cache-mixed.txt  test-cache.txt  test-small.txt  tkc-localities.csv  tkc-localities.txt
frontend/: .env.example  NETLIFY_BUILD_FIX.md  README-NETLIFY.md  TYPESCRIPT_FIXES.md  index.html  package-lock.json  package.json  test-build.sh  test-ui.js  tsconfig.app.json  tsconfig.node.json  verify-build.sh  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: LocationForm.tsx  ResultsTable.tsx
frontend/src/components/ui/: button.tsx  input.tsx  textarea.tsx
frontend/src/types/: api.ts
outputs/: chc_classified.csv  test-cache.csv  test-original-names.csv  test-small-iare.csv  test-small-results.csv  test_hierarchical.csv  tkc-classified.csv
src/: app.py  classify.py  geocode.py  io_utils.py  settings.py
tests/: test_classify.py  test_geocode.py  test_io_utils.py
